# gridsim

./: .editorconfig  .gitignore  README.md  Tasks.md  pyproject.toml  requirements.txt  run.sh
assets/cad/grid/: carriage.json  carriage.step  carriage.stl  carriage.usd  convert_deployment_motor.py  deployment motor.step  deployment_motor.json  deployment_motor.usd  horizontal rail.step  horizontal_rail.json  horizontal_rail.stl  horizontal_rail.usd  vertical_grid_bar.json  vertical_grid_bar.stl  vertical_grid_bar.usd
configs/: facade.yaml  grid.yaml  sensors.yaml  simulation.yaml
docs/: architecture.md  mvp_scope.md  sensor_modeling.md
examples/: run_mvp_sim.py  simple_facade.json  simple_grid.json
isaac/: README.md  WORKLOG.md  run_mvp.py  run_mvp.sh
scripts/: check_system.sh  demo_gocator2690_scan.py  reconstruct_wall_from_gocator.py  setup_env.sh  verify_gocator2690_profile.py  verify_gocator2690_scene.py
src/gridsim_core/: __init__.py  facade_model.py  grid_model.py  robot_model.py  scene_config.py  transforms.py
src/gridsim_estimation/: __init__.py  calibration.py  odometry.py  stability.py
src/gridsim_ros/: package.xml  setup.cfg  setup.py
src/gridsim_ros/gridsim_ros/: __init__.py  calibration_node.py  distance_sensor_node.py  gocator_pointcloud_node.py  imu_sim_node.py  (+4 more)
src/gridsim_sensors/: __init__.py  distance_sensor_model.py  encoder_model.py  gocator2690.py  imu_model.py  lidar_model.py
tests/: test_gocator2690.py  test_grid_model.py  test_odometry.py  test_scene_config.py  test_sensing_teleop.py  test_sensor_models.py  test_transforms.py
(+13 files in other folders)
