[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gridsim"
version = "0.1.0"
description = "Simulation foundations for a modular facade renovation grid"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "PyYAML>=6.0,<7",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["gridsim_core*", "gridsim_sensors*", "gridsim_estimation*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
